Edited index.html and script.js

--- a/cartoon/index.html
+++ b/cartoon/index.html
@@ -14,6 +14,7 @@
     <title>Cartoon Paradise</title>
 </head>
 <body>
+    <a href="https://github.com/kevvchen/CISC3610.git">View the source code here:</a>
     <canvas id="cartoon"></canvas>
     <script src="script.js"></script>
     <a href="\index.html">Click here to go back to the main page!</a>
