--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         <h2>Projects</h2>
         <a href="cartoon/index.html">Cartoon</a>
     </div>
+    <div>
+        <p>You can view the source codes here:</p>
+        <a href="https://github.com/kevvchen/CISC3610.git">GitHub</a>
+    </div>
 </body>
 </html>
