--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
     <h1>Portfolio</h1>
     <div class="homework">
-        <h2>Homeworks</h2>
+        <h2>Homeworks/Labs</h2>
     </div>
     <div class="project">
         <h2>Projects</h2>
-        <a href="cartoon/index.html">Cartoon</a>
+        <ol>
+            <li>
+                <a href="cartoon/index.html">Cartoon</a>
+            </li>
+        </ol>
     </div>
     <div>
         <p>You can view the source codes here:</p>
