Edited index.html in Cartoon folder

--- a/cartoon/index.html
+++ b/cartoon/index.html
@@ -17,6 +17,6 @@
     <a href="https://github.com/kevvchen/CISC3610.git">View the source code here:</a>
     <canvas id="cartoon"></canvas>
     <script src="script.js"></script>
-    <a href="\index.html">Click here to go back to the main page!</a>
+    <a href="https://kevvchen.github.io/CISC3610/">Click here to go back to the main page!</a>
 </body>
 </html>
