Added fruit lab

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             </li>
         </ol>
     </div>
+    <div class="labs">
+        <h2>Labs</h2>
+        <ol>
+            <li>
+                <a href="fruitchart/index.html">Fruit Chart</a>
+            </li>
+        </ol>
+    </div>
     <div>
         <p>You can view the source codes here:</p>
         <a href="https://github.com/kevvchen/CISC3610.git">GitHub</a>
