--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             <li>
                 <a href="form/index.html">Form Project</a>
             </li>
+            <li>
+                <a href="data-visualization/index.html">Data Visualization</a>
+            </li>
+            <li>
+                <a href="video-animation/index.html">Video Animation</a>
+            </li>
         </ol>
     </div>
     <div class="labs">
