--- a/form/index.html
+++ b/form/index.html
@@ -23,6 +23,7 @@
             </div>
         </div>
     </section>
+    <a href="https://kevvchen.github.io/CISC3610/">Click here to go back to the main page!</a>
 </body>
 <script src="script.js"></script>
 </html>
