Added lab files

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <li>
                 <a href="fruitchart/index.html">Fruit Chart</a>
             </li>
+            <li>
+                <a href="audio/index.html">Audio</a>
+            </li>
         </ol>
     </div>
     <div>
