--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li>
                 <a href="audio/index.html">Audio</a>
             </li>
+            <li>
+                <a href="bootstrap/index.html">TailwindCSS</a>
+            </li>
         </ol>
     </div>
     <div>
