Added wicked_editor project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="video-animation/index.html">Video Animation</a>
             </li>
+            <li>
+                <a href="wicked_editor/wicked_project.html">Wicked Editor Project</a>
+            </li>
         </ol>
     </div>
     <div class="labs">
